gen/fcm/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-fcm1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/fcm/v1/lib)
error[E0423]: expected value, found struct `messages::MessagesActions`
   --> gen/fcm/v1/lib/src/lib.rs:536:13
    |
536 |             messages::MessagesActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `messages::MessagesActions { /* fields */ }`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-fcm1`.

To learn more, run the command again with --verbose.
